# gatekeeper

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  EndpointServicesServer.go  ExternalDeviceClient.go  GatekeeperClient.go  K8SAPI.go  README.md  build.rs  gatekeeper.code-workspace  go.mod  go.sum
rpc/: generate.go
rpc/config/v1/: ConfigService.pb.go  ConfigService_grpc.pb.go
rpc/endpoint_manager/v1/: EndpointManager.pb.go  EndpointManager_grpc.pb.go
rpc/proto/: ConfigService.proto  EndpointManager.proto
rpc/types/: types.pb.go
sdk/: GatekeeperClient.go  go.mod
sdk/rpc/endpoint_manager/v1/: EndpointManager.pb.go  EndpointManager_grpc.pb.go
sdk/rpc/proto/: types.proto
src/: cert_monitor.rs  cloudflare_api.rs  lib.rs  main.rs  vault.rs
src/assets/: error_page.html
src/data/: cache.rs  mod.rs
src/edc_helper/: go.mod  go.sum  main.go
src/edc_helper/common/: common.go
src/gw/: error_page.html  gateway.rs  grpc_transcoder.rs  mod.rs  reverse_proxy.rs
src/pki/: cert_svc.rs  mod.rs  status_api.rs  supported_ca.rs
src/services/: api.rs  cert_svc.rs  config_svc.rs  device_auth.rs  endpoint_manager.rs  ext_device.rs  grpc.rs  mod.rs  service_registry.rs  static_file_server.rs
src/services/proto/: APIService.proto  ConfigService.proto  EndpointManager.proto  ServiceRegistry.proto  types.proto
src/services/proto/service_registry/: ServiceRegistry.proto
src/test-service/: go.mod  go.sum  main.go
src/test-service/common/: common.go
