[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
rustls = [ "reqwest/rustls-tls", "rustify/rustls-tls" ]

[dependencies]
async-trait="0.1"
pingora = { version = "0.4.0", features = ["boringssl"], path = "vendor/pingora/pingora" }
pingora-core = { version = "0.4.0", path = "vendor/pingora/pingora-core" }
pingora-load-balancing = { version = "0.4.0", path = "vendor/pingora/pingora-load-balancing" }
pingora-proxy = { version = "0.4.0", path = "vendor/pingora/pingora-proxy" }
pingora-http = { version = "0.4.0", path = "vendor/pingora/pingora-http" }
serde = "1.0.217"
serde_json = "1.0.138"
mongodb = {version = "3.2.1"}
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.39"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytes = "1.10.0"
tonic = {version = "0.12.3", default-features = false, features = ["server", "codegen", "prost", "tls"]}
prost = "0.13.5"
tonic-reflection = "0.12.3"
redis = "0.29.0"
uuid = {version = "1.15.1", features = ["v7"]}
http = "1.2.0"
rustify = { version = "0.6.1", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.2", default-features = false }
rustify_derive = "0.5.4"
derive_builder = "0.20.2"
serde_derive = "1.0.218"
instant-acme = "0.7.2"
http-body-util = "0.1.2"
http-body = "1.0.1"
base64 = "0.22.1"
rcgen = "0.13.2"
rand = { version = "0.9.0", default-features = false, features = ["std", "thread_rng"] }
x509-parser = "0.17.0"
p384 = "0.13.1"
sha2 = "0.10.8"
prost-reflect = { version = "0.15.2", features = ["derive", "serde"] }

[build-dependencies]
tonic-build = "0.12.3"
