[package]
name = "gatekeeper"
version = "0.2.0"
edition = "2021"

[features]
default = []
tokioConsole = [ "dep:console-subscriber" ]
rustls = [ "reqwest/rustls-tls", "rustify/rustls-tls" ]

[dependencies]
async-trait="0.1"
pingora = { version = "0.4.0", features = ["boringssl"], path = "vendor/pingora/pingora" }
pingora-core = { version = "0.4.0", path = "vendor/pingora/pingora-core" }
pingora-proxy = { version = "0.4.0", path = "vendor/pingora/pingora-proxy" }
pingora-http = { version = "0.4.0", path = "vendor/pingora/pingora-http" }
serde = "1.0.217"
serde_json = "1.0.138"
serde_derive = "1.0.218"
rustify_derive = "0.5.4"
mongodb = {version = "3.2.1"}
tokio = {version = "1.43.0", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-rustls = "0.26.2"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytes = "1.10.0"
tonic = {version = "0.12.3", default-features = false, features = ["server", "codegen", "prost", "tls"]}
tonic-reflection = "0.12.3"
prost = "0.13.5"
prost-reflect = { version = "0.15.2", features = ["derive", "serde"] }
redis = "0.29.0"
uuid = {version = "1.15.1", features = ["v7"]}
http = "1.2.0"
http-body-util = "0.1.2"
http-body = "1.0.1"
rustify = { version = "0.6.1", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.2", default-features = false }
derive_builder = "0.20.2"
instant-acme = { git = "https://github.com/djc/instant-acme", rev = "8a2e69f2df5d23fea21d2fc844d05bbf70b52031", default-features = false, features = ["time", "x509-parser", "aws-lc-rs"] }
base64 = "0.22.1"
rand = { version = "0.9.0", default-features = false, features = ["std", "thread_rng"] }
x509-parser = "0.17.0"
p384 = "0.13.1"
sha2 = "0.10.8"
google-cloud-security-publicca-v1 = "0.3.0"
google-cloud-auth = "0.20.0"
rustls-pki-types = "1.12.0"
once_cell = "1.21.3"
hyper = "1.6.0"
hyper-util = "0.1.14"
tower = "0.5.2"
rustls = "0.23.28"
console-subscriber = { version = "0.4.1", optional = true }

[build-dependencies]
tonic-build = "0.12.3"
